--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -5,6 +5,6 @@ log4j.appender.B.layout=org.apache.log4j.PatternLayout
 log4j.appender.B.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
 
 log4j.appender.A=org.apache.log4j.FileAppender
-log4j.appender.A.File=iplant-email.log
+log4j.appender.A.File=/var/log/iplant-email/iplant-email.log
 log4j.appender.A.layout=org.apache.log4j.PatternLayout
 log4j.appender.A.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
