--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,10 +1,8 @@
-log4j.rootLogger=WARN, A, B
+log4j.rootLogger=WARN, A
 
-log4j.appender.B=org.apache.log4j.ConsoleAppender
-log4j.appender.B.layout=org.apache.log4j.PatternLayout
-log4j.appender.B.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
-
-log4j.appender.A=org.apache.log4j.FileAppender
+log4j.appender.A=org.apache.log4j.RollingFileAppender
 log4j.appender.A.File=/var/log/iplant-email/iplant-email.log
+log4j.appender.A.MaxFileSize=100MB
+log4j.appender.A.MaxBackupIndex=5
 log4j.appender.A.layout=org.apache.log4j.PatternLayout
 log4j.appender.A.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
